resources/day14/backend-tier-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-tier-policy
spec:
  podSelector:
    matchLabels:
      tier: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: frontend
    - podSelector:
        matchLabels:
          tier: gateway
  egress:
  - to:
    - podSelector:
        matchLabels:
          tier: data
  - to:
    - podSelector:
        matchLabels:
          tier: backend
